# darkstar

./: .gitignore  Cargo.toml
shaders/: 16lines.fs  16lines.vs
src/: capture.rs  capture_windows.rs  main.rs  window.rs
